fix margin about_collapse

--- a/src/pages/about/About.scss
+++ b/src/pages/about/About.scss
@@ -4,6 +4,6 @@
     width: 95%;
     margin: 0 auto;
     &_collapse {
-        margin: 40% auto;
+        margin: 40px auto;
     }
 }
